--- a/src/components/tabs/tabs.module.css
+++ b/src/components/tabs/tabs.module.css
@@ -1,18 +1,5 @@
-.Panel {
-  position: fixed;
-  right: 0;
-  top: 0;
-  height: 100%;
-  width: 20rem;
-  background-color: white;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  z-index: 50;
-  padding: 1rem;
-}
-
 .Tabs {
-  border: 1px solid var(--color-gray-200);
-  border-radius: 0.375rem;
+  width: 100%;
 }
 
 .List {
@@ -84,21 +71,4 @@
 
 .Panel {
   position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 8rem;
-  outline: 0;
-
-  &:focus-visible {
-    outline: 2px solid var(--color-blue);
-    outline-offset: -1px;
-    border-radius: 0.375rem;
-  }
-}
-
-.Icon {
-  width: 2.5rem;
-  height: 2.5rem;
-  color: var(--color-gray-300);
 }
